# marketing-agent

./: .gitignore  README.md  gemini_tool.py  main.py  main.py.output  openai_imagegen_tool.py  pyproject.toml  requirements.txt
.github/workflows/: claude.yml
standard/: image_server.py  main.output  main_agent.py  video_server.py
